# astro-phase-retrieval

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  _diag.py  _gen_notebook.py  _gen_notebook_cryst.py  _test_synth.py  commit.sh  docker-compose.yml  main.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
data/crystallography/: 1010927.cif  1011097.cif  test_nacl.cif  test_nacl_64.npy  test_upload.cif
docs/: Makefile  changelog.md  cli.md  conf.py  contributing.md  index.rst  security.md  validation.md
docs/api/: algorithms.rst  benchmark.rst  crystallography.rst  data.rst  metrics.rst  models.rst  optics.rst  reporting.rst  visualization.rst
notebooks/: phase_retrieval_crystallography.ipynb  phase_retrieval_crystallography.py  phase_retrieval_hst.ipynb
outputs/: evaluation_report.md
phase_retrieval/: __init__.py  __main__.py
scripts/: README.md  _diag.py  _gen_notebook.py  _gen_notebook_cryst.py  _test_synth.py  main.py
src/: __init__.py  __main__.py  benchmark.py  cli.py  pipeline.py  reporting.py  studies.py  uncertainty.py  validation.py
src/algorithms/: __init__.py  admm.py  base.py  douglas_rachford.py  error_reduction.py  fista.py  gerchberg_saxton.py  hybrid_input_output.py  multi_start.py  phase_diversity.py  pinn.py  raar.py  registry.py  sparse_pr.py  wirtinger_flow.py
src/data/: __init__.py  crystallography.py  downloader.py  loader.py  synthetic.py
src/metrics/: __init__.py  quality.py
src/models/: __init__.py  _base.py  config.py  crystallography.py  optics.py
src/optics/: __init__.py  propagator.py  pupils.py  zernike.py
src/visualization/: __init__.py  crystallography_plots.py  plots.py
tests/: conftest.py  test_algorithms.py  test_benchmark.py  test_cli.py  test_coverage_boost.py  test_coverage_gaps.py  test_crystallography_data.py  test_crystallography_models.py  test_crystallography_visualization.py  test_crystallography_web.py  test_data.py  test_main_module.py  test_metrics.py  test_models.py  test_notebook_generation.py  test_optics.py  test_pinn_mocked.py  test_pipeline_outputs.py  test_studies.py  test_v220_features.py  test_v310_security.py  test_visualization.py  test_web.py
web/: README.md  __init__.py  alembic.ini  concurrency.py  config.py  database.py  dependencies.py  main.py  middleware.py  models.py  schemas.py  security.py  utils.py
web/alembic/: env.py  script.py.mako
web/alembic/versions/: 001_initial_tables.py  002_crystallography_jobs.py  003_add_user_token_version.py
web/frontend/: Dockerfile  angular.json  nginx.conf  package.json  proxy.conf.json  tsconfig.app.json  tsconfig.json
web/frontend/src/: index.html  main.ts  styles.css
web/frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
web/frontend/src/app/core/: api.service.ts  auth.guard.ts  auth.interceptor.ts  auth.service.ts
web/frontend/src/app/pages/: compare.component.ts  crystallography.component.ts  dashboard.component.ts  data.component.ts  explain.component.ts  login.component.ts  register.component.ts  result-detail.component.ts  results.component.ts  run.component.ts  validation.component.ts
web/routers/: __init__.py  algorithms.py  auth.py  crystallography.py  data.py  explain.py  jobs.py  results.py  studies.py  ws.py
web/services/: __init__.py  algorithm_service.py  crystallography_service.py  data_service.py  job_queue.py  study_service.py
