[project]
name = "phase-retrieval"
version = "1.0.0"
description = "Production-ready phase retrieval for real-world HST/JWST astronomical wavefront sensing"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Reza Mirzaeifard"}]
readme = "README.md"
keywords = ["phase-retrieval", "wavefront-sensing", "astronomy", "HST", "JWST", "optics", "PSF"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "astropy>=6.0",
    "astroquery>=0.4.7",
    "pydantic>=2.5",
    "rich>=13.7",
    "scikit-image>=0.22",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
