[project]
name = "phase-retrieval"
version = "2.0.0"
description = "Production-ready phase retrieval with state-of-the-art algorithms for real-world HST/JWST astronomical wavefront sensing"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Reza Mirzaeifard"}]
readme = "README.md"
keywords = ["phase-retrieval", "wavefront-sensing", "astronomy", "HST", "JWST", "optics", "PSF", "wirtinger-flow", "ADMM", "douglas-rachford"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "astropy>=6.0",
    "astroquery>=0.4.7",
    "pydantic>=2.5",
    "rich>=13.7",
    "scikit-image>=0.22",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.2", "mypy>=1.8"]
pinn = ["torch>=2.2"]

[project.scripts]
phase-retrieval = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/data",
    "/outputs",
    "/notebooks/outputs",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["astroquery.*", "astropy.*", "skimage.*"]
ignore_missing_imports = true
