[project]
name = "phase-retrieval"
version = "2.3.0"
description = "Production-ready phase retrieval with state-of-the-art algorithms for real-world HST/JWST astronomical wavefront sensing and X-ray crystallography"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Reza Mirzaeifard"}]
readme = "README.md"
keywords = ["phase-retrieval", "wavefront-sensing", "astronomy", "HST", "JWST", "optics", "PSF", "wirtinger-flow", "ADMM", "douglas-rachford", "shrink-wrap", "crystallography", "X-ray-diffraction", "COD", "FISTA", "proximal-gradient", "sparse-phase-retrieval"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "astropy>=6.0",
    "astroquery>=0.4.7",
    "pydantic>=2.5",
    "rich>=13.7",
    "scikit-image>=0.22",
    "httpx>=0.27",      # COD CIF download with timeout + streaming
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "ruff>=0.2",
    "mypy>=1.8",
    "build>=1.2",
    "pre-commit>=3.7",
    "pip-audit>=2.7",
]
pinn = ["torch>=2.2"]
notebook = ["ipykernel>=7.2.0", "jupyterlab>=4.0"]
docs = ["sphinx>=7.0", "furo>=2024.0", "myst-parser>=3.0"]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/rezamirzaeifard/phase-retrieval"
Documentation = "https://rezamirzaeifard.github.io/phase-retrieval/"
Repository = "https://github.com/rezamirzaeifard/phase-retrieval"
Issues = "https://github.com/rezamirzaeifard/phase-retrieval/issues"
Changelog = "https://github.com/rezamirzaeifard/phase-retrieval/blob/master/CHANGELOG.md"

[project.scripts]
phase-retrieval = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "phase_retrieval", "web"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/data",
    "/outputs",
    "/notebooks/outputs",
    "/main.py",
    "/_diag.py",
    "/_gen_notebook.py",
    "/_test_synth.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "PERF"]
ignore = [
    # Allow mutable class-level defaults in Pydantic models
    "B006",
    # Allow complex comprehensions in scientific code
    "SIM118",
]

[tool.ruff.lint.isort]
known-first-party = ["src", "web", "phase_retrieval"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
"_gen_notebook.py" = ["E501"]
"_diag.py" = ["E402", "E501"]
"_test_synth.py" = ["E402"]
"notebooks/*" = ["E402", "E501"]
# Uppercase variable names (N806) are standard math notation in algorithm/optics code
"src/algorithms/*.py" = ["N806", "N803"]
"src/optics/*.py" = ["N806", "N803"]
"src/metrics/*.py" = ["N806", "N803"]
"src/visualization/*.py" = ["N806", "N803"]
"src/data/crystallography.py" = ["N806", "N803", "S310"]
"tests/*" = ["N802", "N803", "N806", "N815", "PERF102", "E402"]
"web/alembic/*" = ["N999", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: marks tests as slow-running (deselect with -m 'not slow')",
    "integration: marks integration tests requiring network or real FITS files",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["astroquery.*", "astropy.*", "skimage.*", "torch.*", "scipy.*", "jwt.*", "bcrypt.*", "tifffile.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tifffile", "tifffile.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["tests.*", "main", "_diag", "_gen_notebook", "_test_synth", "web.alembic.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
